add interaction between cart and product services
