# cart/internal/api/grpc/controller/cart.go
@@ -2,11 +2,13 @@ package controller
 
 import (
 	"context"
+	"fmt"
 	"time"
 
 	"github.com/Go-Marketplace/backend/cart/internal/model"
 	"github.com/Go-Marketplace/backend/cart/internal/usecase"
 	pbCart "github.com/Go-Marketplace/backend/proto/gen/cart"
+	pbProduct "github.com/Go-Marketplace/backend/proto/gen/product"
 	"github.com/google/uuid"
 	"google.golang.org/grpc/codes"
 	"google.golang.org/grpc/status"
@@ -57,7 +59,12 @@ func CreateCart(ctx context.Context, cartUsecase *usecase.CartUsecase, req *pbCa
 	return &cart, nil
 }
 
-func CreateCartline(ctx context.Context, cartUsecase *usecase.CartUsecase, req *pbCart.CreateCartlineRequest) (*model.CartLine, error) {
+func CreateCartline(
+	ctx context.Context,
+	cartUsecase *usecase.CartUsecase,
+	productClient pbProduct.ProductClient,
+	req *pbCart.CreateCartlineRequest,
+) (*model.CartLine, error) {
 	if req == nil {
 		return nil, status.Errorf(codes.InvalidArgument, "Invalid request")
 	}
@@ -72,23 +79,79 @@ func CreateCartline(ctx context.Context, cartUsecase *usecase.CartUsecase, req *
 		return nil, status.Errorf(codes.InvalidArgument, "Invalid product id: %s", err)
 	}
 
-	cartline := model.CartLine{
+	productResp, err := productClient.GetProduct(ctx, &pbProduct.GetProductRequest{
+		ProductId: req.ProductId,
+	})
+	if err != nil {
+		return nil, status.Errorf(codes.Internal, "Failed to get product: %s", err)
+	}
+
+	cartline := &model.CartLine{
 		UserID:    userID,
 		ProductID: productID,
-		Name:      req.Name,
+		Name:      productResp.Name,
 		Quantity:  1,
 		CreatedAt: time.Now(),
 		UpdatedAt: time.Now(),
 	}
 
 	if err = cartUsecase.CreateCartline(ctx, cartline); err != nil {
-		return nil, status.Errorf(codes.Internal, "Internal error: %s", err)
+		return nil, status.Errorf(codes.Internal, "Failed to create cartline: %s", err)
 	}
 
-	return &cartline, nil
+	if _, err = productClient.UpdateProduct(ctx, &pbProduct.UpdateProductRequest{
+		ProductId: req.ProductId,
+		Quantity:  productResp.Quantity - 1,
+	}); err != nil {
+		if err = cartUsecase.DeleteCartline(ctx, cartline.UserID, cartline.ProductID); err != nil {
+			return nil, status.Errorf(codes.Internal, "Failed to delete cartline: %s", err)
+		}
+		return nil, status.Errorf(codes.Internal, "Failed to update product: %s", err)
+	}
+
+	return cartline, nil
 }
 
-func UpdateCartline(ctx context.Context, cartUsecase *usecase.CartUsecase, req *pbCart.UpdateCartlineRequest) (*model.Cart, error) {
+func returnProducts(ctx context.Context, productClient pbProduct.ProductClient, cartlines ...*model.CartLine) error {
+	productIDs := make([]string, 0, len(cartlines))
+	for _, cartline := range cartlines {
+		productIDs = append(productIDs, cartline.ProductID.String())
+	}
+
+	productsResp, err := productClient.GetProducts(ctx, &pbProduct.GetProductsRequest{
+		ProductIds: productIDs,
+	})
+	if err != nil {
+		return fmt.Errorf("failed to get products: %w", err)
+	}
+
+	if len(productIDs) != len(productsResp.Products) {
+		return fmt.Errorf("cartline doesn't match with product")
+	}
+
+	updateProductRequests := make([]*pbProduct.UpdateProductRequest, 0, len(cartlines))
+	for i, cartline := range cartlines {
+		updateProductRequests = append(updateProductRequests, &pbProduct.UpdateProductRequest{
+			ProductId: cartline.ProductID.String(),
+			Quantity:  productsResp.Products[i].Quantity + cartline.Quantity,
+		})
+	}
+
+	if _, err = productClient.UpdateProducts(ctx, &pbProduct.UpdateProductsRequest{
+		Products: updateProductRequests,
+	}); err != nil {
+		return fmt.Errorf("failed to update products: %w", err)
+	}
+
+	return nil
+}
+
+func UpdateCartline(
+	ctx context.Context,
+	cartUsecase *usecase.CartUsecase,
+	productClient pbProduct.ProductClient,
+	req *pbCart.UpdateCartlineRequest,
+) (*model.CartLine, error) {
 	if req == nil {
 		return nil, status.Errorf(codes.InvalidArgument, "Invalid request")
 	}
@@ -103,27 +166,57 @@ func UpdateCartline(ctx context.Context, cartUsecase *usecase.CartUsecase, req *
 		return nil, status.Errorf(codes.InvalidArgument, "Invalid product id: %s", err)
 	}
 
-	cartline := model.CartLine{
-		UserID:    userID,
-		ProductID: productID,
-		Name:      req.Name,
-		Quantity:  req.Quantity,
-		UpdatedAt: time.Now(),
-	}
-
-	cart, err := cartUsecase.UpdateCartline(ctx, cartline)
+	oldCartline, err := cartUsecase.GetCartline(ctx, userID, productID)
 	if err != nil {
 		return nil, status.Errorf(codes.Internal, "Internal error: %s", err)
 	}
 
-	if cart == nil {
-		return nil, status.Errorf(codes.NotFound, "Cart not found")
+	if oldCartline == nil {
+		return nil, status.Errorf(codes.NotFound, "Cartline not found")
 	}
 
-	return cart, nil
+	newCartline := model.CartLine{
+		UserID:    userID,
+		ProductID: productID,
+		Name:      req.Name,
+		Quantity:  req.Quantity,
+	}
+
+	cartline, err := cartUsecase.UpdateCartline(ctx, newCartline)
+	if err != nil {
+		return nil, status.Errorf(codes.Internal, "Failed to update cartline: %s", err)
+	}
+
+	if req.Quantity != 0 {
+		diff := oldCartline.Quantity - req.Quantity
+
+		productResp, err := productClient.GetProduct(ctx, &pbProduct.GetProductRequest{
+			ProductId: req.ProductId,
+		})
+		if err != nil {
+			return nil, status.Errorf(codes.Internal, "Failed to get product: %s", err)
+		}
+
+		if _, err = productClient.UpdateProduct(ctx, &pbProduct.UpdateProductRequest{
+			ProductId: req.ProductId,
+			Quantity:  productResp.Quantity + diff,
+		}); err != nil {
+			if _, err = cartUsecase.UpdateCartline(ctx, *oldCartline); err != nil {
+				return nil, status.Errorf(codes.Internal, "Failed to update cartline: %s", err)
+			}
+			return nil, status.Errorf(codes.Internal, "Failed to update product: %s", err)
+		}
+	}
+
+	return cartline, nil
 }
 
-func DeleteCart(ctx context.Context, cartUsecase *usecase.CartUsecase, req *pbCart.DeleteCartRequest) error {
+func DeleteCart(
+	ctx context.Context,
+	cartUsecase *usecase.CartUsecase,
+	productClient pbProduct.ProductClient,
+	req *pbCart.DeleteCartRequest,
+) error {
 	if req == nil {
 		return status.Errorf(codes.InvalidArgument, "Invalid request")
 	}
@@ -133,63 +226,105 @@ func DeleteCart(ctx context.Context, cartUsecase *usecase.CartUsecase, req *pbCa
 		return status.Errorf(codes.InvalidArgument, "Invalid user id: %s", err)
 	}
 
-	if err := cartUsecase.DeleteCart(ctx, userID); err != nil {
+	cart, err := cartUsecase.GetUserCart(ctx, userID)
+	if err != nil {
 		return status.Errorf(codes.Internal, "Internal error: %s", err)
+	}
+
+	if cart == nil {
+		return status.Errorf(codes.NotFound, "Cart not found")
+	}
+
+	if err = cartUsecase.DeleteCart(ctx, userID); err != nil {
+		return status.Errorf(codes.Internal, "Failed to delete cart: %s", err)
+	}
+
+	if err = returnProducts(ctx, productClient, cart.Cartlines...); err != nil {
+		if err = cartUsecase.CreateCart(ctx, *cart); err != nil {
+			return status.Errorf(codes.Internal, "Failed to create cart: %s", err)
+		}
+		if err = cartUsecase.CreateCartlines(ctx, cart.Cartlines); err != nil {
+			return status.Errorf(codes.Internal, "Failed to create cartlines: %s", err)
+		}
+		return status.Errorf(codes.Internal, "Failed to return products: %s", err)
 	}
 
 	return nil
 }
 
-func DeleteCartline(ctx context.Context, cartUsecase *usecase.CartUsecase, req *pbCart.DeleteCartlineRequest) (*model.Cart, error) {
+func DeleteCartline(
+	ctx context.Context,
+	cartUsecase *usecase.CartUsecase,
+	productClient pbProduct.ProductClient,
+	req *pbCart.DeleteCartlineRequest,
+) error {
 	if req == nil {
-		return nil, status.Errorf(codes.InvalidArgument, "Invalid request")
+		return status.Errorf(codes.InvalidArgument, "Invalid request")
 	}
 
 	userID, err := uuid.Parse(req.UserId)
 	if err != nil {
-		return nil, status.Errorf(codes.InvalidArgument, "Invalid user id: %s", err)
+		return status.Errorf(codes.InvalidArgument, "Invalid user id: %s", err)
 	}
 
 	productID, err := uuid.Parse(req.ProductId)
 	if err != nil {
-		return nil, status.Errorf(codes.InvalidArgument, "Invalid product id: %s", err)
+		return status.Errorf(codes.InvalidArgument, "Invalid product id: %s", err)
 	}
 
-	cartline := model.CartLine{
-		UserID:    userID,
-		ProductID: productID,
-	}
-
-	cart, err := cartUsecase.DeleteCartline(ctx, cartline)
+	cartline, err := cartUsecase.GetCartline(ctx, userID, productID)
 	if err != nil {
-		return nil, status.Errorf(codes.Internal, "Internal error: %s", err)
+		return status.Errorf(codes.Internal, "Failed to get cartline: %s", err)
 	}
 
-	if cart == nil {
-		return nil, status.Errorf(codes.NotFound, "Cart not found")
+	if err = cartUsecase.DeleteCartline(ctx, userID, productID); err != nil {
+		return status.Errorf(codes.Internal, "Failed to delete cartline: %s", err)
 	}
 
-	return cart, nil
+	if err = returnProducts(ctx, productClient, cartline); err != nil {
+		if err = cartUsecase.CreateCartline(ctx, cartline); err != nil {
+			return status.Errorf(codes.Internal, "Failed to create cartline: %s", err)
+		}
+		return status.Errorf(codes.Internal, "Failed to return products: %s", err)
+	}
+
+	return nil
 }
 
-func DeleteCartCartlines(ctx context.Context, cartUsecase *usecase.CartUsecase, req *pbCart.DeleteCartCartlinesRequest) (*model.Cart, error) {
+func DeleteCartCartlines(
+	ctx context.Context,
+	cartUsecase *usecase.CartUsecase,
+	productClient pbProduct.ProductClient,
+	req *pbCart.DeleteCartCartlinesRequest,
+) error {
 	if req == nil {
-		return nil, status.Errorf(codes.InvalidArgument, "Invalid request")
+		return status.Errorf(codes.InvalidArgument, "Invalid request")
 	}
 
 	userID, err := uuid.Parse(req.UserId)
 	if err != nil {
-		return nil, status.Errorf(codes.InvalidArgument, "Invalid cart id: %s", err)
+		return status.Errorf(codes.InvalidArgument, "Invalid user id: %s", err)
 	}
 
-	cart, err := cartUsecase.DeleteCartCartlines(ctx, userID)
+	cart, err := cartUsecase.GetUserCart(ctx, userID)
 	if err != nil {
-		return nil, status.Errorf(codes.Internal, "Internal error: %s", err)
+		return status.Errorf(codes.Internal, "Internal error: %s", err)
 	}
 
 	if cart == nil {
-		return nil, status.Errorf(codes.NotFound, "Cart not found")
+		return status.Errorf(codes.NotFound, "Cart not found")
 	}
 
-	return cart, nil
+	if err = cartUsecase.DeleteCartCartlines(ctx, userID); err != nil {
+		return status.Errorf(codes.Internal, "Internal error: %s", err)
+	}
+
+	if err = returnProducts(ctx, productClient, cart.Cartlines...); err != nil {
+		if err = cartUsecase.CreateCartlines(ctx, cart.Cartlines); err != nil {
+			return status.Errorf(codes.Internal, "Failed to create cartlines: %s", err)
+		}
+		return status.Errorf(codes.Internal, "Failed to return products: %s", err)
+	}
+
+	return nil
 }
