# product/internal/api/grpc/dto/product.go
@@ -6,4 +6,5 @@ type SearchProductsDTO struct {
 	UserID     uuid.UUID
 	CategoryID int32
 	Moderated  bool
+	ProductIDs []uuid.UUID
 }
